# quant

./: .envrc.example  .gitignore  CLAUDE.md  Makefile  QUANT_SEMANTIC.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
configs/: backtest.yaml  dev.yaml
data/: .gitkeep
data/marts/: dim_security.parquet  dim_universe.parquet  fct_prices.parquet  fct_rates.parquet
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml  requirements.txt
dbt/seeds/: _seeds.yml  macro_series.csv  rate_series.csv
dbt/tests/: assert_fct_macro_all_series_populated.sql  assert_macro_series_freshness.sql  assert_ohlc_consistency.sql  assert_universe_intervals_valid.sql  assert_universe_no_overlap.sql
docker/duckdb-ui/: Dockerfile  entrypoint.sh  serve.py  views.yaml
docs/: DATA_PIPELINES.md  data-sources.md
notebooks/: .gitkeep
scripts/: backtest.py  gen_duckdb_views.py  ingest.py
src/common/: config.py  logging.py
src/data_layer/: ecos_source.py  eia_source.py  fdr_source.py  fred_source.py  ingest.py  loader.py  macro.py  pykrx_source.py  rates.py  securities.py  sources.py  universe.py  universe_snapshots.py
src/execution/: router.py
src/portfolio/: optimizer.py
src/research/: backtest.py  combine.py  validation.py
src/risk/: checks.py
tests/common/: test_config.py
tests/data_layer/: test_eia_source.py  test_fdr_source.py  test_ingest.py  test_macro.py  test_prices.py  test_pykrx_source.py  test_rates.py  test_securities.py  test_universe.py  test_universe_snapshots.py
tests/portfolio/: test_optimizer.py
(+53 files in other folders)
